--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # files/folders
-backend
-server.js
-writeData.js
+frontend/node_modules
+
 
 # dependencies
 /node_modules
